# sorting-algorithms-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
insight/: insight-report-20240411-13-13-14.json  insight-report-20240411-13-30-52.json  insight-report-20240411-23-10-32.json
listsorting/: .ruff.toml  pyproject.toml
listsorting/listsorting/: experiment.py  main.py  sorting.py
listsorting/tests/: test_sorting.py
writing/: reflection.md
